# optim-rag

./: .env.example  .gitignore  README.md  docker-compose.yaml
.cursor/: mcp.json
backend/: Dockerfile  chunking.py  editor_router.py  main.py  mcp_server.py  pdf_ocr.py  pyproject.toml  qdrant_setup.py
backend/chat_clients/: openai_client.py
backend/models/: schema.py
backend/routers/: chat_router.py  editor_router.py  session_router.py
backend/utils/: chunking.py  pdf_ocr.py  qdrant_setup.py
data-source/: quantum.md  quantum.txt  states.docx
data-source/56b9af6e-cc34-48af-b8f8-a6fc46f464dd/data-source/: quantum_more.txt
data-source/5f64a388-6903-4cd4-8736-8944583b9554/Business-specifics/: marketing.docx
data-source/b5bc8c02-5a59-4787-bdd9-aec28834c144/Business-specifics/: 3_question.docx  vison_mission.docx
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/: add-chunk-dialog.tsx  chunk-list.tsx  chunk-status-indicator.tsx  commit-changes-dialog.tsx  file-upload-dialog.tsx  markdown-editor.tsx  markdown-renderer.tsx  metadata-panel.tsx
frontend/lib/: api-session.ts  api.ts  chunk-transform.ts  chunk-utils.ts
frontend/types/: chunk.ts
