[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2pdf>=0.1.8",
    "fastapi>=0.116.1",
    "fastembed>=0.7.3",
    "mistral-ocr>=0.6.0",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.4",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "qdrant-client>=1.15.1",
    "uvicorn>=0.35.0",
]
